--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <button id="register-btn">新規登録</button>
+<button id="register-btn" style="position: absolute; top: 10px; right: 10px;">新規登録</button>
 
   <div class="login-box visible" id="login-box">
     <input type="text" id="username" placeholder="ユーザー名">
