--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>2FA Generator Login</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
+  <meta charset="UTF-8" />
+  <title>2FA認証コードジェネレーター</title>
+  <style>
+    body { font-family: sans-serif; background: #222; color: #eee; text-align: center; padding: 30px; }
+    input, button { font-size: 1.2em; padding: 8px; margin: 5px; }
+    #code-display { margin-top: 30px; font-size: 2em; }
+    #register-form, #login-form { max-width: 300px; margin: auto; }
+    #register-form, #code-display { display: none; }
+    #show-register { position: fixed; top: 10px; right: 10px; padding: 5px 10px; }
+  </style>
 </head>
 <body>
+  <h1>2FA認証コードジェネレーター</h1>
 
-<button id="register-btn" style="position: absolute; top: 10px; right: 10px;">新規登録</button>
-
-  <div class="login-box visible" id="login-box">
-    <input type="text" id="username" placeholder="ユーザー名">
-    <input type="password" id="password" placeholder="パスワード">
-    <button id="login-btn">ログイン</button>
+  <div id="login-form">
+    <input type="text" id="login-username" placeholder="ユーザー名" /><br />
+    <input type="password" id="login-password" placeholder="パスワード" /><br />
+    <button id="login-button">ログイン</button>
   </div>
 
-  <div class="code-box" id="code-box">
-    <h1>2FA CODE:</h1>
-    <div id="code">------</div>
-    <div id="countdown">残り: -- 秒</div>
+  <div id="register-form">
+    <input type="text" id="register-username" placeholder="新規ユーザー名" /><br />
+    <input type="password" id="register-password" placeholder="新規パスワード" /><br />
+    <input type="text" id="register-secret" placeholder="QRコードのシークレット" /><br />
+    <button id="register-button">新規登録</button><br />
+    <button id="cancel-register">キャンセル</button>
   </div>
 
-  <script src="main.js"></script>
+  <div id="code-display"></div>
+
+  <button id="show-register">新規登録へ</button>
+
+  <script src="/main.js"></script>
 </body>
 </html>
