--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <script src="https://cdn.jsdelivr.net/npm/jsotp@1.0.1/build/jsOTP.min.js"></script>
   <meta charset="UTF-8" />
   <title>2FA認証コードジェネレーター</title>
   <style>
