--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <script src="https://cdn.jsdelivr.net/npm/jsotp@1.0.1/build/jsOTP.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jsSHA/2.4.2/sha.js"></script>
+  <script src="/jsOTP.js"></script>
   <meta charset="UTF-8" />
   <title>2FA認証コードジェネレーター</title>
   <style>
